--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -24,6 +24,6 @@
         </wm-nav>
     </wm-navbar>
     <wm-view class="dialog-view" name="view1">
-        <wm-pagedialog name="pagedialog1" content="MyCart" width="60%" on-ok="pagedialog1Ok($event, $isolateScope)"></wm-pagedialog>
+        <wm-pagedialog name="pagedialog1" content="MyCart" width="90%" on-ok="pagedialog1Ok($event, $isolateScope)" title="" oktext="Close" iconclass=""></wm-pagedialog>
     </wm-view>
 </wm-partial>
