"Is Hostile" label enhancement Files modified - [_viewForm]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -24,7 +24,8 @@
                                 <wm-gridrow name="gridrow98">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn181"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn182" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="labelHostile" caption="Please Take Caution" backgroundcolor="yellow" fontweight="bold" show="false"></wm-label>
+                                        <wm-label accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee,Inspector,GISAdmin,CodeOfficer,CodeManager,InspectorManager" padding="unset 0.5em" name="labelHostile" caption="Please Take Caution" backgroundcolor="yellow"
+                                        fontweight="bold" show="false"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn183"></wm-gridcolumn>
                                 </wm-gridrow>
